fixed issue with evasion punishments